--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,4 @@ analyzer:
   errors:
     deprecated_member_use: ignore
     no_leading_underscores_for_local_identifiers: ignore
+    use_build_context_synchronously: ignore
